[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://SFX/Sounds/smb_pause.wav" type="AudioStream" id=2]
[ext_resource path="res://sprites/mario.png" type="Texture" id=3]
[ext_resource path="res://fonts/SuperMario256.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/blank.png" type="Texture" id=5]
[ext_resource path="res://sprites/border.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="PauseScreen" type="CanvasLayer"]

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pause/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/PauseMenu"]
margin_left = 8.0
margin_top = 16.0
margin_right = 243.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Orima"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="Pause/PauseMenu"]
margin_left = 48.0
margin_top = 112.0
margin_right = 80.0
margin_bottom = 140.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Pause/PauseMenu/Resume"]
margin_left = -19.0
margin_top = 40.0
margin_right = 53.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="Pause/PauseMenu"]
margin_left = 176.0
margin_top = 112.0
margin_right = 208.0
margin_bottom = 140.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Pause/PauseMenu/Quit"]
margin_left = -5.5
margin_top = 40.0
margin_right = 37.5
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseAudio" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 2 )
[connection signal="pressed" from="Pause/PauseMenu/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/PauseMenu/Quit" to="Pause" method="_on_Quit_pressed"]
